add ip-utilization api; add rack height check
